--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,75 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Robert Goldstein's Website</title>
-  </head>
+<head>
+<style>
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 150px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    margin-bottom: 50px
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 100px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+    float: left
+}
+    
+</style>
+</head>
+<body>
+
+<div class="container">
+
+<header>
+   <h1><img src= "Images/blackgoose copy.png" alt="Black Goose Logo" /><br />Black Goose Bistro</h1>
+</header>
   
-  <body>
-    <p>Hello World</p>
-  </body>
+<nav>
+  <ul>
+      <li><a href="Prototype.htm">Home</a></li>
+    <li><a href="The%20Restaurant.htm">The Restaurant</a></li>
+    <li><a href="Catering.htm">Catering</a></li>
+    <li><a href="lah.htm">Location and Hours</a></li>
+  </ul>
+</nav>
+
+<article>
+  <h1>Come by and have a snack....Then come back!</h1>
+    <p><img src="Images/interior.jpg"</br><img src="Images/interior2.jpg"</p>
+    <p><img src="Images/cookedgoose.jpg"</br><img src="Images/wine.jpg"</p>
+    </article>
+
+
+<footer>Copyright© Roberto Goldstein Billionaire co.</footer>
+
+</div>
+
+</body>
 </html>
+
