--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <a href="/black_goose">
+        <a href="/black_goose">Hello from the otherside</a>
     </body>
 </html>
 
