--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -89,7 +89,7 @@ article {
         <p> Hours:<br/>Tuesday to Saturday, 11 am through midnight.</p>
         <h2>Our Favorite Dishes</h2>
         <p>Chack chouka</p>
-        <a href="chachouka.htm" target="new"><img src= "images/chakhouka.jpg" width="150px"/></a>
+        <a href="chachouka.htm" target="new"><img src= "images/chakchouka.jpg" width="150px"/></a>
         <p>Cooked Goose</p>
         <a href="cookedgoose.htm" target="new"><img src= "images/cookedgoose.jpg" width="150px"/></a>
 </article>
