--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -92,6 +92,8 @@ article {
         <a href="chachouka.htm" target="new"><img src= "images/chakchouka.jpg" width="150px"/></a>
         <p>Cooked Goose</p>
         <a href="cookedgoose.htm" target="new"><img src= "images/cookedgoose.jpg" width="150px"/></a>
+        <p>Napa Valley Wine</p>
+        <a href="wine.htm" target="new"><img src= "images/wine.jpg" width="150px"/></a>
 </article>
   
    
