--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -94,11 +94,13 @@ article {
         <a href="cookedgoose.htm" target="new"><img src= "images/cookedgoose.jpg" width="150px"/></a>
         <p>Napa Valley Wine</p>
         <a href="wine.htm" target="new"><img src= "images/wine.jpg" width="150px"/></a>
+        <p>Bread Sticks</p>
+        <a href="breadsticks.htm" target="new"><img src= "images/breadsticks.jpg" width="150px"/></a>
 </article>
   
    
 
-<footer>Copyright © W3Schools.com</footer>
+<footer>Robert Goldstein Inc.</footer>
 
 </div>
 
