--- a/black_goose/Prototype.htm
+++ b/black_goose/Prototype.htm
@@ -62,8 +62,8 @@ article {
 
 <article>
   <h1>Come by and have a snack....Then come back!</h1>
-    <p><img src="Images/interior.jpg"</br><img src="Images/interior2.jpg"</p>
-    <p><img src="Images/cookedgoose.jpg"</br><img src="Images/wine.jpg"</p>
+    <p><img src="images/interior.jpg"</br><img src="images/interior2.jpg"</p>
+    <p><img src="images/cookedgoose.jpg"</br><img src="images/wine.jpg"</p>
     </article>
 
 
