--- a/black_goose/Prototype.htm
+++ b/black_goose/Prototype.htm
@@ -47,7 +47,7 @@ article {
 <div class="container">
 
 <header>
-   <h1><img src= "Images/blackgoose copy.png" alt="Black Goose Logo" /><br />Black Goose Bistro</h1>
+   <h1><img src= "images/blackgoose copy.png" alt="Black Goose Logo" /><br />Black Goose Bistro</h1>
 </header>
   
 <nav>
