--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -55,6 +55,7 @@ article {
     <li><a href="The%20Restaurant.htm">The Restaurant</a></li>
     <li><a href="Catering.htm">Catering</a></li>
     <li><a href="lah.htm">Location and Hours</a></li>
+    <li><a href= "blog.htm">Blog</a></li>
   </ul>
 </nav>
 
