--- a/black_goose/lah.htm
+++ b/black_goose/lah.htm
@@ -54,6 +54,7 @@ article {
     <li><a href="The%20Restaurant.htm">The Restaurant</a></li>
     <li><a href="Catering.htm">Catering</a></li>
     <li><a href="lah.htm">Location and Hours</a></li>
+    <li><a href= "blog.htm">Blog</a></li>
   </ul>
 </nav>
 
