--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -76,6 +76,7 @@ article {
                 <dd>Skewers of shrimp marinated in lemongrass, garlic, and fish sace then grilled to perfection. Served with spicy peanut sauce and jasmine rice. $12.95</dd>
                 <dt>Jerk Rotisserie Chiken with Fried Plantains&mdash;<strong>New Item!</strong></dt>
                 <dd>Tender chicken slow-roasted on the rotisserie, flavored with spicy and fragrant jerk sauce and served with fried plantains and fresh mango. $12.95</dd>
+                <img src= "images/chakchouka.jpg"/>
                 <dt>שקשוקה (Chakchouka)</dt>
                 <dd>A Tunisian and Israeli dish of tomatoes, onions, pepper, spices, and eggs. It's usually eaten for breakfast or lunch, but I think it's tasty anytime. And it's easy to make. It is similar to the Turkish dish 'Menemen' and to the Latin American breakfast dish "Huevos Rancheros."</dd>
             </dl>
