--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -60,6 +60,7 @@ article {
 </nav>
 
 <article>
+    <a href="#top">To the top of the page</a>
         <h1> Summer Menu Items</h1>
             <p>Posted by BGB, June 15, 2013</p>
             <p>Our chef has been busy putting together the perfect menu for the summer months. Stop by to thry thes appetizers and main courses while the days are still long.</p>
@@ -99,6 +100,7 @@ article {
         <a href="wine.htm" target="new"><img src= "images/wine.jpg" width="150px"/></a>
         <p>Bread Sticks</p>
         <a href="breadsticks.htm" target="new"><img src= "images/breadsticks.jpg" width="150px"/></a>
+    <a href="#top">To the top of the page</a>
 </article>
   
    
