--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -42,7 +42,7 @@ article {
 </style>
 </head>
 <body>
-
+    <a name="top"></a>
 <div class="container">
 
 <header>
@@ -60,7 +60,7 @@ article {
 </nav>
 
 <article>
-    <a href="#top">To the top of the page</a>
+   
         <h1> Summer Menu Items</h1>
             <p>Posted by BGB, June 15, 2013</p>
             <p>Our chef has been busy putting together the perfect menu for the summer months. Stop by to thry thes appetizers and main courses while the days are still long.</p>
