--- a/black_goose/blog.htm
+++ b/black_goose/blog.htm
@@ -5,7 +5,7 @@
     <script language="javascript" type="text/javascript">
  <!--
  function popitup(url) {
-newwindow=window.open(url,'name','height=200,width=150');
+newwindow=window.open(url,'name','height=350px,width=420px');
 if (window.focus) {newwindow.focus()}
 return false;
  }
