--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
     <body>
         <a href="/black_goose/Prototype.htm">Hello from the otherside</a>
-        <a href="/black_goose/table.htm">Table Page</a>
+        <a href="/table.htm">Table Page</a>
     </body>
 </html>
 
