--- a/table.htm
+++ b/table.htm
@@ -6,6 +6,10 @@
             border: 1px solid black;
             border-collapse: collapse;
         }
+        th, td {
+            padding: 15px;
+            text-align: left;
+        }
     </style>
     </head>
     
