--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
         <a href="/black_goose/Prototype.htm">Hello from the otherside</a>
         <br/>
         <a href="/table.htm">Table Page</a>
+        <a href="/black_goose_new/index.htm"> New Blocked Webpage
     </body>
 </html>
 
