--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,12 @@
 <html>
     <body>
         <a href="/black_goose/Prototype.htm">Hello from the otherside</a>
-        <br/>
+            <br/>
         <a href="/table.htm">Table Page</a>
-        <a href="/black_goose_new/index.htm"> New Blocked Webpage
+            <br/>
+        <a href="/black_goose_new/index.htm"> New Blocked Home Page
+            <br/>
+        <a href="/black_goose_new/content_page_new.htm"> New Blocked Content Page
     </body>
 </html>
 
