--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,12 @@
             <br/>
         <a href="/table.htm">Table Page</a>
             <br/>
-        <a href="/black_goose_new/index.htm"> New Blocked Home Page
+        <a href="/black_goose_new/index.htm"> New Blocked Home Page</a>
             <br/>
-        <a href="/black_goose_new/content_page_new.htm"> New Blocked Content Page
-    </body>
+        <a href="/black_goose_new/content_page_new.htm"> New Blocked Content Page</a>
+            </br>   
+        <a href="contestform.htm"> New Blocked Content Page</a>
+            
+      </body>
 </html>
 
