--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
             <br/>
         <a href="/black_goose_new/content_page_new.htm"> New Blocked Content Page</a>
             </br>   
-        <a href="contestform.htm"> New Blocked Content Page</a>
+        <a href="contestform.htm">Form Page</a>
             
       </body>
 </html>
