--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,8 @@
         <a href="/black_goose_new/content_page_new.htm"> New Blocked Content Page</a>
             </br>   
         <a href="contestform.htm">Form Page</a>
+            </br>
+        <a href="form2.htm"> Form Page 2</a>
             
       </body>
 </html>
