--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
             </br>
         <a href="form2.htm"> Form Page 2</a>
              </br>
-        <a href="/LWD4e_chapter11/twenties.html"> Twenties</a>
+        <a href="twenties.html"> Twenties</a>
       </body>
 </html>
 
