--- a/twenties.html
+++ b/twenties.html
@@ -1,10 +1,9 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html>
 
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <title>The Back of the Twenty Dollar Bill</title>
-head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <style type="text/css">
 
