--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,8 @@
         <a href="form2.htm"> Form Page 2</a>
              </br>
         <a href="twenties.html"> Twenties</a>
+            </br>
+        <a href="color.htm"> Here is my red circle</a>
       </body>
 </html>
 
