--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
              </br>
         <a href="twenties.html"> Twenties</a>
             </br>
-        <a href="color.htm"> Here is my red circle</a>
+        <a href="Color.htm"> Here is my red circle</a>
       </body>
 </html>
 
