--- a/Color.htm
+++ b/Color.htm
@@ -6,7 +6,7 @@
                 font-size: 900;
                 text-align: center;
                 color: red;
-               
+                line-height: 50px:
             }
              h2 {
                 font: 1.8em avenir;
@@ -20,6 +20,7 @@
     <body>
         
         <h1>O</h1>
+        <h2> Red makes me feel valient.</h2>
     </body>
 
 
