--- a/Color.htm
+++ b/Color.htm
@@ -6,7 +6,7 @@
                 font-size: 900;
                 text-align: center;
                 color: red;
-                line-height: 50px:
+                margin-top: -50px:
             }
              h2 {
                 font: 1.8em avenir;
