--- a/index.htm
+++ b/index.htm
@@ -15,6 +15,8 @@
         <a href="twenties.html"> Twenties</a>
             </br>
         <a href="Color.htm"> Here is my red circle</a>
+            </br>
+        <a href="menu.html"> This is my menu page</a>
       </body>
 </html>
 
