--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,8 @@
                 font-family: Georgia, serif;
                 font-size: small;
                 line-height: 1.75em;
+                background-image:url(background.jpg);
+            }
             }
             h1{
                 font: bold 1.5 em
