--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,8 @@
         <a href="Color.htm"> Here is my red circle</a>
             </br>
         <a href="menu.html"> This is my menu page</a>
+            </br>
+        <a href="/jenware/index.htm"> This is my menu page</a>
       </body>
 </html>
 
