--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
             </br>
         <a href="menu.html"> This is my menu page</a>
             </br>
-        <a href="/jenware/index.htm"> This is my menu page</a>
+        <a href="/jenware/index.htm"> Jenware Page</a>
       </body>
 </html>
 
